tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnProperty.errors.txt
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(23,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(23,12): error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(23,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(24,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(24,12): error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(24,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(26,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(26,12): error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(26,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(27,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(27,12): error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(27,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(30,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(30,12): error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(30,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(31,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(31,12): error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(31,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(33,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(33,12): error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(33,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(34,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(34,12): error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(34,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(37,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(37,12): error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(37,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(38,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(38,12): error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(38,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(40,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(40,12): error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(40,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(41,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(41,12): error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(41,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(44,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(44,12): error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(44,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(45,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(45,12): error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(45,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(47,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(47,12): error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(47,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(48,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(48,12): error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(48,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(51,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(51,12): error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(51,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(52,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(52,12): error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(52,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(54,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(54,12): error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(54,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(55,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(55,12): error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(55,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(58,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(58,12): error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(58,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(59,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(59,12): error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(59,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(61,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(61,12): error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(61,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(62,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(62,12): error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(62,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(65,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(65,12): error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(65,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(66,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(66,12): error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(66,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(68,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(68,12): error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(68,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(69,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(69,12): error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(69,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(72,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(72,12): error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(72,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(73,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(73,12): error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(73,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(75,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(75,12): error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(75,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(76,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(76,12): error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
comparisonOperatorWithNoRelationshipObjectsOnProperty.ts(76,19): error TS2454: Variable 'a2' is used before being assigned.


==== comparisonOperatorWithNoRelationshipObjectsOnProperty.ts (96 errors) ====
    class A1 {
        public a: number;
    }
    
    class B1 {
        public a: string;
    }
    
    class A2 {
        private a: string;
    }
    
    class B2 {
        private a: string;
    }
    
    var a1: A1;
    var b1: B1;
    var a2: A2;
    var b2: B2;
    
    // operator <
    var r1a1 = a1 < b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r1a2 = a2 < b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r1b1 = b1 < a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r1b2 = b2 < a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r2a2 = a2 > b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r2b1 = b1 > a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r2b2 = b2 > a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r3a2 = a2 <= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r3b1 = b1 <= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r3b2 = b2 <= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r4a2 = a2 >= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r4b1 = b1 >= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r4b2 = b2 >= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator ==
    var r5a1 = a1 == b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r5a2 = a2 == b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r5b1 = b1 == a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r5b2 = b2 == a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator !=
    var r6a1 = a1 != b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r6a2 = a2 != b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r6b1 = b1 != a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r6b2 = b2 != a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator ===
    var r7a1 = a1 === b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r7a2 = a2 === b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r7b1 = b1 === a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r7b2 = b2 === a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    
    // operator !==
    var r8a1 = a1 !== b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A1' and 'B1' have no overlap.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r8a2 = a2 !== b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'A2' and 'B2' have no overlap.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    
    var r8b1 = b1 !== a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B1' and 'A1' have no overlap.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r8b2 = b2 !== a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
               ~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'B2' and 'A2' have no overlap.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.